// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activeClass options 1`] = `
Object {
  "Constructor": "LinkToComponent",
  "Options": Object {
    "ID": "component",
    "activeClass": "test-active",
    "className": "",
    "params": Object {},
    "path": "base",
    "routerData": Object {
      "activePageComponent": null,
      "activePageOptions": null,
      "url": "/base",
    },
    "text": "",
    "useActiveClass": true,
  },
  "html": "
<a href=\\"/base\\" class=\\"test-active\\">
  <!--default-->
</a>
",
}
`;

exports[`className option & useActiveClass & activeClass 1`] = `
Object {
  "Constructor": "LinkToComponent",
  "Options": Object {
    "ID": "component",
    "activeClass": "test-active",
    "className": "foo",
    "params": Object {},
    "path": "base",
    "routerData": Object {
      "activePageComponent": null,
      "activePageOptions": null,
      "url": "/base",
    },
    "text": "",
    "useActiveClass": true,
  },
  "html": "
<a href=\\"/base\\" class=\\"foo test-active\\">
  <!--default-->
</a>
",
}
`;

exports[`className option 1`] = `
Object {
  "Constructor": "LinkToComponent",
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "foo bar",
    "params": Object {},
    "path": "base",
    "routerData": Object {
      "activePageComponent": null,
      "activePageOptions": null,
      "url": "",
    },
    "text": "Base page",
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base\\" class=\\"foo bar\\">Base page
  <!--default-->
</a>
",
}
`;

exports[`click 1`] = `
Object {
  "Constructor": "LinkToComponent",
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "",
    "params": Object {},
    "path": "base",
    "routerData": Object {
      "activePageComponent": null,
      "activePageOptions": null,
      "url": "",
    },
    "text": "",
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base\\" class=\\"\\">
  <!--default-->
</a>
",
}
`;

exports[`params options 1`] = `
Object {
  "Constructor": "LinkToComponent",
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "",
    "params": Object {
      "id": 1,
    },
    "path": "base",
    "routerData": Object {
      "activePageComponent": null,
      "activePageOptions": null,
      "url": "",
    },
    "text": "",
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base/1\\" class=\\"\\">
  <!--default-->
</a>
",
}
`;

exports[`render correctly 1`] = `
Object {
  "Constructor": "LinkToComponent",
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "",
    "params": Object {},
    "path": "base",
    "routerData": Object {
      "activePageComponent": null,
      "activePageOptions": null,
      "url": "",
    },
    "text": "Base page",
    "useActiveClass": false,
  },
  "html": "
<a href=\\"/base\\" class=\\"\\">Base page
  <!--default-->
</a>
",
}
`;

exports[`useActiveClass options 1`] = `
Object {
  "Constructor": "LinkToComponent",
  "Options": Object {
    "ID": "component",
    "activeClass": "active",
    "className": "",
    "params": Object {},
    "path": "base",
    "routerData": Object {
      "activePageComponent": null,
      "activePageOptions": null,
      "url": "/base",
    },
    "text": "",
    "useActiveClass": true,
  },
  "html": "
<a href=\\"/base\\" class=\\"active\\">
  <!--default-->
</a>
",
}
`;
